--- a/app/assets/stylesheets/recipe.scss
+++ b/app/assets/stylesheets/recipe.scss
@@ -1,94 +1,109 @@
 // Place all the styles related to the recipe controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.showHeader h1{
-  text-align: center;
+.showHeader h1 {
+    text-align: center;
 }
-.showContainer{
-  display: inline-block;
-  text-align: center;
-  margin: 0px auto;
+.showHeader ul {
+    padding-left: 0;
+    margin-left: 0;
 }
-.discoveryhead{
-  margin-top: -20px !important;
+.showContainer {
+    display: inline-block;
+    text-align: center;
+    margin: 0 auto;
 }
-
-h1.discovery{
-  margin-top: 30px;
+.discoveryhead {
+    margin-top: -20px !important;
 }
-form{
-  margin-top: 10px;
+h1.discovery {
+    margin-top: 30px;
 }
-input{
-  border: 1px solid #ccc;
-  border-radius: 5px;
+form {
+    margin-top: 10px;
+    text-align: center;
 }
-select{
+input {
     border: 1px solid #ccc;
     border-radius: 5px;
 }
-input.searchButton{
-  padding-top: 4px;
-  font-size: 150%;
+select {
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
-.results{
-  padding: 15px;
-  text-align: center;
+input.searchButton {
+    padding-top: 4px;
+    font-size: 150%;
+}
+.results {
+    padding: 15px;
+    text-align: center;
+}
+.recipe-card {
+    border: 1px solid black;
+    height: 420px;
+    text-align: center;
+    // border-radius: 15px;
+}
+.recipe-card img {
+    width: 100%;
+    height: 100%;
+    position: cover;
+}
+.searchButton {
+    color: white;
+    background-color: #7890cd;
+    height: 50px;
+    width: 100px;
+    text-align: center;
+    border-radius: 5px;
+}
+#search {
+    width: 70%;
+    border: 1px solid black;
+    border-radius: 5px;
+    height: 50px;
+    font-size: 150%;
+}
+.card-wrapper {}
+#card-title {
+    text-align: left;
+    font-size: 1.5em;
+    padding-left: 5px;
+    padding-top: 5px;
+}
+#swipeBox {
+    max-width: 450px;
+    text-align: center;
+}
+.showImage {
+    max-width: 100%;
+    text-align: center;
+}
+#ingredients {
+    text-align: justify;
+}
+#directions {
+    text-align: justify;
 }
 
-.recipe-card{
-  border: 1px solid black;
-  height: 420px;
-  text-align: center;
-  // border-radius: 15px;
+.glyphicon-bookmark{
+  font-size: 300%;
 }
-
-.recipe-card img{
-  width: 100%;
-  height: 100%;
-  position: cover;
-}
-.searchButton{
-  color: white;
-  background-color: #7890cd;
-  height:50px;
-  width: 100px;
-  text-align: center;
-  border-radius: 5px;
-}
-
-#search{
-  width: 70%;
-  border: 1px solid black;
-  border-radius: 5px;
-  height: 50px;
-  font-size: 150%;
-}
-.card-wrapper{
-
-}
-#card-title{
+.ratings{
   text-align: left;
-  font-size: 1.5em;
-  padding-left: 5px;
+  padding-left: 0px;
 }
-
-#swipeBox{
-  max-width:450px;
-  text-align: center;
+#rating{
+  float: right;
 }
-
-.showImage{
-  max-width: 100%;
-  text-align: center;
+.palateRating{
+  padding-right: 0px;
+  text-align: right;
 }
-#ingredients{
-  text-align: justify;
+li{
+  text-align: left;
 }
-#directions{
-  text-align: justify;
-}
-
 //
 // #showContainer{
 //   text-align: center;
