--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -41,7 +41,7 @@ nav{
 
 .navbar-header {
  	float:none;
-    width:100vw;
+    width:100%;
     padding:10px;
     background: #7890cd;
 
